sec_group.tf
#Security Group
resource "aws_security_group" "sg_vpc_iac_web_server" {
  name        = "Allow web traffic from web to server"
  description = "Allow web traffic inbound traffic"
  vpc_id      = aws_vpc.vpc_iac.id

  ingress {
    description      = "HTTPS from Internet to VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTPS from Internet to VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "sg_vpc_iac_web_server"
  }
}
